# ai-agents

./: .gitignore  README.md
.github/workflows/: main.yml
agent-builder-agent/: GITHUB_ACTIONS_SETUP.md  README.md  graph.py  main.py  prompts.py  pyproject.toml  schemas.py  tools.py
agents/2025-12-26-dependency-conflict-resolver/: README.md  agent.py  graph.py  pyproject.toml  schemas.py  tools.py
agents/2025-12-26-smart-meal-planner/: .env.example  README.md  agent.py  graph.py  prompts.py  pyproject.toml  schemas.py
ai-built-agents/: README.md
ai-built-agents/2025-12-26-daily-focus-enhancer/: README.md  agent.py  graph.py  prompts.py  pyproject.toml  schemas.py
ai-built-agents/2025-12-26-daily-stress-manager/: README.md  agent.py  graph.py  pyproject.toml  schemas.py
ai-built-agents/2025-12-26-sleep-optimizer/: README.md  agent.py  graph.py  prompts.py  pyproject.toml  schemas.py
ai-built-agents/2025-12-26-smart-bill-tracker/: .env.example  README.md  agent.py  graph.py  pyproject.toml  schemas.py
ai-built-agents/2025-12-26-smart-budget-buddy/: README.md  agent.py  graph.py  prompts.py  pyproject.toml  schemas.py
ai-built-agents/2025-12-26-smart-habit-builder/: .env.example  README.md  agent.py  graph.py  pyproject.toml  schemas.py
ai-built-agents/2025-12-26-smart-medication-manager/: .env.example  README.md  agent.py  pyproject.toml  schemas.py  tools.py
ai-built-websites/: README.md
ai-built-websites/aether-agency/: README.md  generated-page.html
email-agent/: README.md  main.py  pyproject.toml  test.py
local-ai-agent/: main.py  pyproject.toml
mvp-builder-agent/: README.md  main.py  pyproject.toml  ui.py
mvp-planner-agent/: README.md  main.py  pyproject.toml  ui.py
scraper-agent/: .gitignore  README.md  local_llm_main.py  main.py  pyproject.toml
