[project]
name = "mvp-builder-agent"
version = "0.1.0"
description = "AI agent that builds working prototypes from MVP builder prompts using modern tech stacks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-ollama>=1.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.28.0",
]

