[tool.poetry]
name = "daily-stress-manager"
version = "0.1.0"
description = "An agent to help manage daily stress."
authors = ["Agent Foundry"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.9.0"
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
python-dotenv = "^1.2.1"
openai = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"