[tool.poetry]
name = "smart-bill-tracker"
version = "0.1.0"
description = "An agent that helps track and remind users about their monthly bills."
authors = ["Agent Foundry AI"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.9.0"
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
python-dotenv = "^1.2.1"
twilio = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
