[tool.poetry]
name = "smart-budget-buddy"
version = "0.1.0"
description = "An AI agent to help manage personal finances by providing budget recommendations."
authors = ["AI Foundry"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=2.9.0"
langgraph = ">=0.2.0"
langchain-openai = ">=0.2.0"
python-dotenv = ">=1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"